<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gtec_rosmsgs</name>
  <version>2.0.0</version>
  <description>The GTEC MSGS package</description>
  <author email="valentin.barral@udc.es">Valentin Barral</author>
  <maintainer email="corra981@gmail.com">giacomo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>ros_environment</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <test_depend>ament_lint_common</test_depend>


  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>rclpy</build_depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
